index.html: adicionei parágrafo

--- a/index.html
+++ b/index.html
@@ -54,5 +54,8 @@
 			<li>Penhor - Usado de maneira metafórica (figurada). "penhor desta igualdade" é a garantia, a segurança de que haverá liberdade.</li>
 		</ul>
 	</footer>
+
+	<p>Fim</p>
+	<!-- controlado pelo Git 01 -->
 </body>
 </html>
