Alteração: alterado o conteúdo do TAG <title>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Brasil - Hino Nacional</title>
 	<link rel="stylesheet" type="text/css" href="teste_folha.css">
 </head>
 <body>
