Adicionado: paragrafo de direitos autorais

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<header>
 
+		<p>Este documento não possiu direitos autorais</p>
 
 		<div class="titulo">
 			<p><a href="http://www2.planalto.gov.br/mandatomicheltemer/conheca-a-presidencia/acervo/simbolos-nacionais/simbolos-nacionais-1" target="_blank" >Simbolos Oficiais do Brasil</p></a>
